@@ -36,14 +36,6 @@ extern "C"
 {
 #endif /* __cplusplus */
 
-#if !defined (ACE_WIN32)
-// VAC++ doesn't correctly grok the ::getpwnam_r - the function is redefined
-// in pwd.h, and that redefinition is used here
-#  if defined (_AIX) && defined (__IBMCPP__) && (__IBMCPP__ >= 400)
-  extern int _posix_getpwnam_r(const char *, struct passwd *, char *,
-                               int, struct passwd **);
-#  endif /* AIX and VAC++ 4 */
-#endif /* !ACE_WIN32 */
 
 #ifdef __cplusplus
 }
