@@ -1,3 +1,8 @@
+Wed Mar 16 14:34:57 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * ace/os_include/os_pwd.h:
+          Removed legacy _posix_getpwnam_r() declaration.
+
 Wed Mar 16 14:27:15 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * ace/OS_NS_pwd.inl:
